--- a/nginx.conf
+++ b/nginx.conf
@@ -50,7 +50,7 @@ http {
         # redirect 404 Not Found error pages to the static page /err404.html
         #
 
-        #error_page  400 401 403 404 405            /err404.html;
+        error_page  400 401 403 404 405            /err404.html;
         location ^~ /err404.html {
             root   C:/Users/personal/Desktop/Assignment-6/assnmt-6/errorpages;
         }
